[tool.poetry]
name = "pydbt"
version = "0.1.0"
description = ""
authors = ["gonza <matgonzalez@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.0"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
